# real-statistic

./: .gitignore  METHODOLOGY.md  Makefile  README.md  SOURCES.md  pyproject.toml
data/: baskets.yaml  macro.yaml  salaries.yaml
data/prices/: de.yaml  fr.yaml  ro.yaml
docs/: data.json  en.html  index.html  story.html.j2  story.ro.html.j2  technical.html  template.html.j2
src/real_statistic/: cli.py  compute.py  load.py  render.py  schema.py  validate.py
tests/: conftest.py  test_compute.py  test_schema.py  test_validate.py
